--- a/app/src/main/res/layout/giris.xml
+++ b/app/src/main/res/layout/giris.xml
@@ -2,21 +2,21 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center">
 
 
-
-
-
-        <ImageButton
-            android:id="@+id/aracbakim"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            android:background="@drawable/aracbakim"></ImageButton>
+            android:layout_marginTop="81dp"
+            app:srcCompat="@drawable/aracbakim" />
+
 
 
 </RelativeLayout>
